--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,21 @@
 		}
 	},
 
-	"browser_action": {
+	"_browser_action": {
 		"default_title": "Pinterest Button light",
 		"default_icon": {
 			"48": "icons/icon.png",
 			"96": "icons/icon@2x.png"
 		}
+	},
+
+	"page_action": {
+		"default_title": "Pinterest Button light",
+		"default_icon": {
+			"19": "icons/icon.png",
+			"38": "icons/icon@2x.png"
+		},
+		"show_matches": ["http://*/*", "https://*/*"]
 	},
 
 	"permissions": ["activeTab", "tabs"],
