--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,19 @@
 {
 	"manifest_version": 2,
 	"name": "pinterest_light",
-	"version": "0.2",
+	"version": "0.3",
 
-	"page_action": {
+	"browser_action": {
 		"default_title": "Pinterest Button light",
 		"default_icon": {
 			"48": "icons/icon.png",
 			"96": "icons/icon@2x.png"
-		},
-		"show_matches": ["http://*/*", "https://*/*"]
+		}
 	},
 
-	"permissions": ["activeTab", "tabs", "declarativeContent"],
+	"permissions": ["activeTab", "tabs"],
 	"background": {
-		"scripts": ["background.js"],
-		"persistent": false
+		"scripts": ["background.js"]
 	}
 
 }
