wip: successfully inject js code into pin-builder

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,11 @@
 		}
 	},
 
-	"permissions": ["activeTab", "tabs"],
+	"permissions": [
+		"activeTab",
+		"tabs",
+		"*://*.pinterest.com/pin-builder/*"
+	],
 	"background": {
 		"scripts": ["background.js"]
 	}
