--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "0.4",
 
 	"browser_action": {
-		"default_title": "Pinterest Button light",
+		"default_title": "Pinterest Button Light",
 		"default_icon": {
 			"48": "icons/icon.png",
 			"96": "icons/icon@2x.png"
