--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"name": "pinterest_light",
-	"version": "0.4.3",
+	"version": "0.5",
 
-	"browser_action": {
+	"action": {
 		"default_title": "Pinterest Button Light",
 		"default_icon": {
 			"48": "icons/icon.png",
@@ -13,11 +13,20 @@
 
 	"permissions": [
 		"activeTab",
-		"tabs",
+		"scripting",
+		"tabs"
+	],
+	"host_permissions": [
 		"*://*.pinterest.com/pin-builder/*"
 	],
+
 	"background": {
 		"scripts": ["background.js"]
+	},
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "pinterest_light@actionless.github.com",
+			"strict_min_version": "106.0"
+		}
 	}
-
 }
