--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,9 +31,10 @@ jobs:
       - name: Install
         run: |
           npm install
+          npm install @microsoft/eslint-formatter-sarif@2.1.7
 
       - name: Run ESLint
-        run: eslint .
+        run: ./node_modules/eslint/bin/eslint.js .
           --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
         continue-on-error: true
